@@ -1,0 +1,36 @@
+name: CI
+on: [push]
+jobs:
+  modern_perl:
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+        perl: [ '5.30', '5.28', '5.26', '5.24' ]
+    name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl }}
+      - run: perl -V
+      - run: cpanm -v Test::Pod Test::More
+      - run: prove -lv t
+  legacy_perl:
+    strategy:
+      matrix:
+        os: ['ubuntu-latest', 'macos-latest']
+        # https://github.com/shogo82148/actions-setup-perl/blob/master/src/installer.ts
+        perl: [ '5.22', '5.20', '5.18', '5.16', '5.14', '5.12', '5.10', '5.8', '5.8.5']
+    name: Perl ${{ matrix.perl }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup perl
+        uses: shogo82148/actions-setup-perl@v1
+        with:
+          perl-version: ${{ matrix.perl }}
+      - run: perl -V
+      - run: cpanm -v Test::Pod Test::More
+      - run: prove -lv t
