@@ -1,6 +1,9 @@
 Encode/CP1252 version 0.34
 ==========================
 
+[![CPAN version](https://badge.fury.io/pl/Encode-CP1252.svg)](https://badge.fury.io/pl/Encode-CP1252)
+[![Build Status](https://github.com/theory/encode-zapcp1252/workflows/CI/badge.svg)](/theory/encode-zapcp1252/actions/)
+
 Have you ever been processing a Web form submit, assuming that the incoming
 text was encoded in ISO-8859-1 (Latin-1), only to end up with a bunch of junk
 because someone pasted in content from Microsoft Word? Well, this is because
